--- a/Ru.html
+++ b/Ru.html
@@ -87,7 +87,7 @@
         <a href="#" onclick="mostrarConvite()">Clique aqui</a>
         <div id="convite">
             
-            <p class="important">Tendo em conta que a cidade de Luanda foi contemplada com a sua presença, é por meio deste convidada a iniciar a primeira missão de uma longa lista de experimentar as melhores aventuras locais - Observação de Baleias e Golfinhos em alto mar, além de também ter uma visão diferente da cidade a partir do mar. Esta tarde de energia e paz pertence a uma lista de coisas que vai experimentar cá, conhecendo o intocado, indo ao limite, sendo livre com euforia, e finalmente respirar; missão esta que levará a dias de descoberta com o desconhecido e o extraordinário, na companhia de uma alma diferente e especial pois apenas uma reconhece igualmente a outra.</p>
+            <p class="important">Tendo em conta que a cidade de Luanda foi contemplada com a sua presença, é por meio deste convidada a iniciar a primeira missão de uma longa lista de experimentar as melhores aventuras locais: Observação de Baleias e Golfinhos em alto mar, além de também ter uma visão diferente da cidade a partir do mar. Esta tarde de energia e paz pertence a uma lista de coisas que vai experimentar cá, conhecendo o intocado, indo ao limite, sendo livre com euforia, e finalmente respirar; missão esta que levará a dias de descoberta com o desconhecido e o extraordinário, na companhia de uma alma diferente e especial pois apenas uma reconhece igualmente a outra.</p>
             <p>Este gentleman busca-te em casa e, óbvio, deixa-te também.</p>
             <p class="important">O que ganhas com isso?</p>
             <p>• A emoção de descobrir e ver de perto tais animais no seu habitat natural.</p>
